added dev server

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <div id="reactApp"></div>
-    <script src="static/js/lifelog.js"></script>
+    <script src="/static/js/lifelog.js"></script>
   </body>
 </html>
