--- a/app/static/index.html
+++ b/app/static/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Lifelog</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="initial-scale=1.0, width=device-width, height=device-height, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   </head>
   <body>
     <div id="reactApp"></div>
