--- a/app/static/index.html
+++ b/app/static/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="/static/styles/index.css" type="text/css" />
   </head>
   <body>
     <div id="reactApp"></div>
